--- a/_all-courses/ma232.md
+++ b/_all-courses/ma232.md
@@ -13,7 +13,14 @@ ug-prereq-courses:
 
 The fundamental group: Homotopy of maps, multiplication of paths, the fundamental group, induced
 homomorphisms, the fundamental group of the circle, covering spaces, lifting theorems, the
-universal covering space, Seifert-van Kampen theorem, applications. Simplicial and singular
+universal covering space, Seifert-van Kampen theorem, applications. 
 
-Homology: Simplicial complexes, chain complexes, definitions of the simplicial and singular homology
+Simplicial and singular Homology: Simplicial complexes, chain complexes, definitions of the simplicial and singular homology
 groups, properties of homology groups, applications
+
+Suggested books : 
+
+  1. Armstrong, M.A., Basic Topology, Springer (India), 2004.
+  2. Hatcher, A., Algebraic Topology, Cambridge University Press, 2002.
+  3. Kosniowski, C.A., First Course in Algebraic Topology, Cambridge Univ. Press, 1980.
+
