--- a/_all-courses/ma232.md
+++ b/_all-courses/ma232.md
@@ -23,4 +23,5 @@ Suggested books :
   1. Armstrong, M.A., Basic Topology, Springer (India), 2004.
   2. Hatcher, A., Algebraic Topology, Cambridge University Press, 2002.
   3. Kosniowski, C.A., First Course in Algebraic Topology, Cambridge Univ. Press, 1980.
+  4. Croom, F.H., Basic Concepts of Algebraic Topology, Springer-Verlag, 1978. 
 
