--- a/_all-courses/ma232.md
+++ b/_all-courses/ma232.md
@@ -15,8 +15,8 @@ The fundamental group: Homotopy of maps, multiplication of paths, the fundamenta
 homomorphisms, the fundamental group of the circle, covering spaces, lifting theorems, the
 universal covering space, Seifert-van Kampen theorem, applications. 
 
-Simplicial and singular Homology: Simplicial complexes, chain complexes, definitions of the simplicial and singular homology
-groups, properties of homology groups, applications
+Simplicial Homology: Simplicial complexes, chain complexes, definitions of the simplicial homology
+groups, properties of homology groups, applications.
 
 Suggested books : 
 
