--- a/_seminars/2018/2018-09-25-raghuram.md
+++ b/_seminars/2018/2018-09-25-raghuram.md
@@ -1,6 +1,6 @@
 ---
 speaker: A Raghuram (IISER Pune)
-title: "Geodesics on Platonic Solids"
+title: "From Calculus to Number Theory."
 date: 25 September, 2018
 time: 3 pm
 venue: LH-1, Mathematics Department
