--- a/_all-courses/ma384.md
+++ b/_all-courses/ma384.md
@@ -1,10 +1,24 @@
 ---
-
-
 code: MA 384
 title: Mathematical Physics
-prereq-courses: 
-ug-prereq-courses: 
+prereq-courses:
+ug-prereq-courses:
+books:
+  - author: Abraham and Marsden
+    title: Foundations of Mechanics
+    publ: AMS Chelsea
+  - author: V. I. Arnold
+    title: Mathematical Methods of Classical Mechanics
+    publ: Springer, Graduate texts in mathematics 60
+  - author: T. Frankel
+    title: The geometry of physics
+    publ: Cambridge Univ Press 2012
+  - author: H. Goldstein
+    title: Classical Mechanics
+    publ: Addison-Wesley
+  - author: Hitchin, Segal and Ward
+    title: Integrable systems
+    publ: Oxford Univ Press
 ---
 
-
+The purpose of this course will be to understand (to an extent) and appreciate the symbiotic relationship that exists between mathematics and physics. Topics to be covered can vary but those in this edition include: a brisk introduction to basic notions of differential geometry (manifolds, vector fields, metrics, geodesics, curvature, Lie groups and such), classical mechanics (Hamiltonian and Lagrangian formulations, n-body problems with special emphasis on the n=3 case) and time permitting, an introduction to integrable systems.
