--- a/_all-courses/ma393.md
+++ b/_all-courses/ma393.md
@@ -1,10 +1,23 @@
 ---
-
-
 code: MA 393
-title: Topics in Theoretical Statistics
-prereq-courses: 
-ug-prereq-courses: 
+title: Topics in  random discrete structures
+prereq-courses:
+ug-prereq-courses:
+prereqs:
+  - Sufficient exposure to probability.
+  - Familiarity with basic properties of Brownian motion.
+books:
+  - author: Jim Pitman
+    title: Combinatorial stochastic processes
+    publ: Lecture Notes in Mathematics, vol. 1875, Springer-Verlag, Berlin (2006).
+  - author: Jean-François Le Gall
+    title: Random trees and applications
+    publ: Probability Surveys (2005).
+  - author: Grégory Miermont
+    title: Aspects of random maps
+    publ: Saint-Flour lecture notes (2014).
+
+
 ---
 
-
+ Real trees, the Brownian continuum random tree, phase transition in random graphs, scaling limits of discrete combinatorial structures, random maps, the Brownian map and its geometry
