--- a/_all-courses/ma385.md
+++ b/_all-courses/ma385.md
@@ -1,6 +1,4 @@
 ---
-
-
 code: MA 385
 title: Classical Groups
 books:
@@ -13,9 +11,13 @@ books:
   - author: Herman Weyl
     title: The Classical Groups
     publ: Princeton University Press, Princeton, 1946
-prereq-courses: MA 212 and MA 219
-ug-prereq-courses: 
+  - author: J. A. Green
+    title: The characters of the finite general linear groups
+    publ: Trans. Amer. Math. Soc. 80 (1955), 402-447
+prereq-courses: MA 220
+ug-prereq-courses:
 ---
 
 
-General and special linear groups, bilinear forms, Symplectic groups, symmetric forms, quadratic forms, Orthogonal geometry, orthogonal groups, Clifford algebras, Hermitian forms, Unitary spaces, Unitary groups.
+This course will focus on the structure as well as on finite dimensional complex representations of the following classical groups:
+General and special Linear groups, Symplectic groups, Orthogonal and Unitary groups.
