--- a/_all-courses/ma210.md
+++ b/_all-courses/ma210.md
@@ -31,4 +31,4 @@ Topics:
 * First order logic: First order languages, deduction and truth, Models, Godel's completeness and compactness theorems.
 * Godel's incompleteness theorem
 * Homotopy Type Theory: propositions as types, the identity type family, topological view of the identity type, foundations of homotopy type theory.
-* Most of the material will be developed using the dependently typed language/proof assistant Agda. Connections with programming in functional languages will be explored.
+* Most of the material will be developed using the dependently typed language Idris. Connections with programming in functional languages will be explored.
