upmeier headin with date

--- a/_posts/2018-12-07-upmeier.md
+++ b/_posts/2018-12-07-upmeier.md
@@ -1,5 +1,5 @@
 ---
-title: Lectures by H. Upmeier, Infosys Visiting Professor
+title: Lectures by H. Upmeier, Infosys Visiting Professor, from Friday, December 7, 2018
 ---
 
 Professor H. Upmeier of the Marburg University would be visiting
