Upmeier timing change in 2 more places

--- a/_posts/2018-12-07-upmeier.md
+++ b/_posts/2018-12-07-upmeier.md
@@ -8,7 +8,7 @@ Department of Mathematics, IISc, as the InfoSys Visiting Professor during the pe
 
 During his stay, he intends to give a series of lectures on the broad theme of _"Geometric
 Quantization in Complex and Harmonic Analysis"_. The first set of lectures will take place
-according to the following schedule. All lectures will be at 4:00 pm in LH-1.
+according to the following schedule. The first lecture will be at 3:00 pm in LH-1, Department of Mathematics.  All subsequent lectures will be at 4:00 pm in LH-1.
 
 - Lecture 1: Friday, Dec 7
 - Lecture 2: Monday, Dec 10
