--- a/_all-courses/ma278.md
+++ b/_all-courses/ma278.md
@@ -13,22 +13,26 @@ books:
   - author: K. Alligood, T. Sauer, & James A.Yorke
     title: 'Chaos: An Introduction to Dynamical Systems'
     publ: Springer-Verlag, 1996
-  - author: M.Tabor 
+  - author: M.Tabor
     title: Chaos and Integrability in Non-linear Dynamics
     publ: 1989
-prereq-courses: 
-ug-prereq-courses: 
+prereq-courses:
+ug-prereq-courses:
 ---
 
+Linear stability analysis, attractors, limit cycles, Poincare-Bendixson
+theorem, relaxation oscillations, elements of bifurcation theory:
+saddle-node, transcritical, pitchfork, Hopf bifurcations,
+integrability, Hamiltonian systems, Lotka-Volterra equations,
+Lyapunov function & direct method for stability, dissipative systems,
+Lorenz system, chaos & its measures, Lyapunov exponents, strange
+attractors, simple maps, period-doubling bifurcations, Feigenbaum
+constants, fractals.
+Both flows (continuous time systems) & discrete time systems (simple
+maps) will be discussed.
+Assignments will include numerical simulations.
 
-The course introduces basic mathematical techniques to understand qualitatively
-the long-term behaviour of systems evolving in time. Most of the phenomena
-occurring in nature, and around us, are nonlinear in nature and often these
-exhibit interesting behaviour which could be unpredictable and
-counterintuitive. Tools and techniques of dynamical systems theory help in
-understanding the behaviour of systems and in gaining control over their
-behaviour, to a certain extent. Dynamical systems theory has wide applications
-in the study of complex systems, including physical & biological systems,
-engineering, aerodynamics, economics, etc.
- 
- 
+Prerequisites, if any: familiarity with linear algebra - matrices, and
+ordinary differential equations
+
+Desirable: ability to write codes for solving simple problems.
