--- a/_data/publications.bib
+++ b/_data/publications.bib
@@ -1,3 +1,381 @@
+
+@article {MR3860458,
+    AUTHOR = {Ghara, Soumitra and Kumar, Surjit},
+     TITLE = {On the sum of two subnormal kernels},
+   JOURNAL = {J. Math. Anal. Appl.},
+  FJOURNAL = {Journal of Mathematical Analysis and Applications},
+    VOLUME = {469},
+      YEAR = {2019},
+    NUMBER = {2},
+     PAGES = {1015--1027},
+      ISSN = {0022-247X},
+   MRCLASS = {47B15},
+  MRNUMBER = {3860458},
+       DOI = {10.1016/j.jmaa.2018.09.048},
+       URL = {https://doi.org/10.1016/j.jmaa.2018.09.048},
+}
+
+@article {MR3847228,
+    AUTHOR = {Sain, Debmalya and Paul, Kallol and Mal, Arpita},
+     TITLE = {On approximate {B}irkhoff-{J}ames orthogonality and normal
+              cones in a normed space},
+   JOURNAL = {J. Convex Anal.},
+  FJOURNAL = {Journal of Convex Analysis},
+    VOLUME = {26},
+      YEAR = {2019},
+    NUMBER = {1},
+     PAGES = {341--351},
+      ISSN = {0944-6532},
+   MRCLASS = {49J53 (46B20 52A10)},
+  MRNUMBER = {3847228},
+}
+
+@article {MR3862628,
+    AUTHOR = {Datta, Basudeb and Maity, Dipendu},
+     TITLE = {Semi-equivelar maps on the torus and the {K}lein bottle are
+              {A}rchimedean},
+   JOURNAL = {Discrete Math.},
+  FJOURNAL = {Discrete Mathematics},
+    VOLUME = {341},
+      YEAR = {2018},
+    NUMBER = {12},
+     PAGES = {3296--3309},
+      ISSN = {0012-365X},
+   MRCLASS = {52C20 (57N05)},
+  MRNUMBER = {3862628},
+       DOI = {10.1016/j.disc.2018.08.016},
+       URL = {https://doi.org/10.1016/j.disc.2018.08.016},
+}
+
+@article {MR3859224,
+    AUTHOR = {Das, Soumya and Khan, Rizwanur},
+     TITLE = {The third moment of symmetric square {$L$}-functions},
+   JOURNAL = {Q. J. Math.},
+  FJOURNAL = {The Quarterly Journal of Mathematics},
+    VOLUME = {69},
+      YEAR = {2018},
+    NUMBER = {3},
+     PAGES = {1063--1087},
+      ISSN = {0033-5606},
+   MRCLASS = {11M06},
+  MRNUMBER = {3859224},
+       DOI = {10.1093/qmath/hay012},
+       URL = {https://doi.org/10.1093/qmath/hay012},
+}
+
+@article {MR3848067,
+    AUTHOR = {Banerjee, Abhishek},
+     TITLE = {On {A}uslander's formula and cohereditary torsion pairs},
+   JOURNAL = {Commun. Contemp. Math.},
+  FJOURNAL = {Communications in Contemporary Mathematics},
+    VOLUME = {20},
+      YEAR = {2018},
+    NUMBER = {6},
+     PAGES = {1750071, 27},
+      ISSN = {0219-1997},
+   MRCLASS = {18E30 (18E40)},
+  MRNUMBER = {3848067},
+       DOI = {10.1142/S0219199717500717},
+       URL = {https://doi.org/10.1142/S0219199717500717},
+}
+
+@article {MR3846155,
+    AUTHOR = {B\"{o}cherer, Siegfried and Das, Soumya},
+     TITLE = {Petersson norms of not necessarily cuspidal {J}acobi modular
+              forms and applications},
+   JOURNAL = {Adv. Math.},
+  FJOURNAL = {Advances in Mathematics},
+    VOLUME = {336},
+      YEAR = {2018},
+     PAGES = {335--376},
+      ISSN = {0001-8708},
+   MRCLASS = {11F50 (11F46)},
+  MRNUMBER = {3846155},
+       DOI = {10.1016/j.aim.2018.07.033},
+       URL = {https://doi.org/10.1016/j.aim.2018.07.033},
+}
+
+@article {MR3842204,
+    AUTHOR = {Borah, Diganta and Haridas, Pranav and Verma, Kaushal},
+     TITLE = {Comments on the {G}reen's function of a planar domain},
+   JOURNAL = {Anal. Math. Phys.},
+  FJOURNAL = {Analysis and Mathematical Physics},
+    VOLUME = {8},
+      YEAR = {2018},
+    NUMBER = {3},
+     PAGES = {383--414},
+      ISSN = {1664-2368},
+   MRCLASS = {30C40 (30F45 31A15 31C15 32F45 32Q05 32Q15)},
+  MRNUMBER = {3842204},
+       DOI = {10.1007/s13324-017-0177-5},
+       URL = {https://doi.org/10.1007/s13324-017-0177-5},
+}
+
+@article {MR3841840,
+    AUTHOR = {Pingali, Vamsi Pritham},
+     TITLE = {A note on higher extremal metrics},
+   JOURNAL = {Trans. Amer. Math. Soc.},
+  FJOURNAL = {Transactions of the American Mathematical Society},
+    VOLUME = {370},
+      YEAR = {2018},
+    NUMBER = {10},
+     PAGES = {6995--7010},
+      ISSN = {0002-9947},
+   MRCLASS = {53C25 (53C55)},
+  MRNUMBER = {3841840},
+       DOI = {10.1090/tran/7416},
+       URL = {https://doi.org/10.1090/tran/7416},
+}
+
+@article {MR3840737,
+    AUTHOR = {Ayyer, Arvind and Ramassamy, Sanjay},
+     TITLE = {The {H}ilbert-{G}alton board},
+   JOURNAL = {ALEA Lat. Am. J. Probab. Math. Stat.},
+  FJOURNAL = {ALEA. Latin American Journal of Probability and Mathematical
+              Statistics},
+    VOLUME = {15},
+      YEAR = {2018},
+    NUMBER = {2},
+     PAGES = {755--774},
+      ISSN = {1980-0436},
+   MRCLASS = {60J27 (60C05 82C23)},
+  MRNUMBER = {3840737},
+}
+
+@article {MR3836146,
+    AUTHOR = {B\"{o}cherer, Siegfried and Das, Soumya},
+     TITLE = {Cuspidality and the growth of {F}ourier coefficients of
+              modular forms},
+   JOURNAL = {J. Reine Angew. Math.},
+  FJOURNAL = {Journal f\"{u}r die Reine und Angewandte Mathematik. [Crelle's
+              Journal]},
+    VOLUME = {741},
+      YEAR = {2018},
+     PAGES = {161--178},
+      ISSN = {0075-4102},
+   MRCLASS = {11F30},
+  MRNUMBER = {3836146},
+       DOI = {10.1515/crelle-2015-0075},
+       URL = {https://doi.org/10.1515/crelle-2015-0075},
+}
+
+@article {MR3836111,
+    AUTHOR = {Manikandan, K. and Vishnu Priya, N. and Senthilvelan, M. and
+              Sankaranarayanan, R.},
+     TITLE = {Deformation of dark solitons in a {$\Cal{PT}$}-invariant
+              variable coefficients nonlocal nonlinear {S}chr\"{o}dinger
+              equation},
+   JOURNAL = {Chaos},
+  FJOURNAL = {Chaos. An Interdisciplinary Journal of Nonlinear Science},
+    VOLUME = {28},
+      YEAR = {2018},
+    NUMBER = {8},
+     PAGES = {083103, 12},
+      ISSN = {1054-1500},
+   MRCLASS = {82C10},
+  MRNUMBER = {3836111},
+       DOI = {10.1063/1.5039901},
+       URL = {https://doi.org/10.1063/1.5039901},
+}
+
+@article {MR3835489,
+    AUTHOR = {Ayyer, Arvind and Finn, Caley and Roy, Dipankar},
+     TITLE = {Matrix product solution of a left-permeable two-species
+              asymmetric exclusion process},
+   JOURNAL = {Phys. Rev. E},
+  FJOURNAL = {Physical Review E},
+    VOLUME = {97},
+      YEAR = {2018},
+    NUMBER = {1},
+     PAGES = {012151, 10},
+      ISSN = {2470-0045},
+   MRCLASS = {82C20},
+  MRNUMBER = {3835489},
+}
+
+@article {MR3826476,
+    AUTHOR = {Ciaurri, \'{O}scar and Roncal, Luz and Thangavelu, Sundaram},
+     TITLE = {Hardy-type inequalities for fractional powers of the
+              {D}unkl-{H}ermite operator},
+   JOURNAL = {Proc. Edinb. Math. Soc. (2)},
+  FJOURNAL = {Proceedings of the Edinburgh Mathematical Society. Series II},
+    VOLUME = {61},
+      YEAR = {2018},
+    NUMBER = {2},
+     PAGES = {513--544},
+      ISSN = {0013-0915},
+   MRCLASS = {26D10 (26A33 33C45 35A23 42C10 43A90)},
+  MRNUMBER = {3826476},
+MRREVIEWER = {Dinesh Kumar},
+       DOI = {10.1017/s0013091517000311},
+       URL = {https://doi.org/10.1017/s0013091517000311},
+}
+
+@article {MR3825472,
+    AUTHOR = {Anamby, Pramath and Das, Soumya},
+     TITLE = {Bounds for the {P}etersson norms of the pullbacks of
+              {S}aito-{K}urokawa lifts},
+   JOURNAL = {J. Number Theory},
+  FJOURNAL = {Journal of Number Theory},
+    VOLUME = {191},
+      YEAR = {2018},
+     PAGES = {289--304},
+      ISSN = {0022-314X},
+   MRCLASS = {11F11 (11F46 11F66)},
+  MRNUMBER = {3825472},
+       DOI = {10.1016/j.jnt.2018.03.011},
+       URL = {https://doi.org/10.1016/j.jnt.2018.03.011},
+}
+
+@article {MR3820247,
+    AUTHOR = {Reza, Md. Ramiz},
+     TITLE = {Curvature inequalities for operators in the {C}owen-{D}ouglas
+              class of a planar domain},
+   JOURNAL = {Indiana Univ. Math. J.},
+  FJOURNAL = {Indiana University Mathematics Journal},
+    VOLUME = {67},
+      YEAR = {2018},
+    NUMBER = {3},
+     PAGES = {1255--1279},
+      ISSN = {0022-2518},
+   MRCLASS = {30C},
+  MRNUMBER = {3820247},
+       DOI = {10.1512/iumj.2018.67.7320},
+       URL = {https://doi.org/10.1512/iumj.2018.67.7320},
+}
+
+@article {MR3818448,
+    AUTHOR = {Chandel, Vikramjeet Singh},
+     TITLE = {The three-point {P}ick-{N}evanlinna interpolation problem on
+              the polydisc},
+   JOURNAL = {Complex Var. Elliptic Equ.},
+  FJOURNAL = {Complex Variables and Elliptic Equations. An International
+              Journal},
+    VOLUME = {63},
+      YEAR = {2018},
+    NUMBER = {9},
+     PAGES = {1341--1352},
+      ISSN = {1747-6933},
+   MRCLASS = {32A17 (30E05 30J10 32F45 46E20)},
+  MRNUMBER = {3818448},
+       DOI = {10.1080/17476933.2017.1370461},
+       URL = {https://doi.org/10.1080/17476933.2017.1370461},
+}
+
+@article {MR3816172,
+    AUTHOR = {Pal, Ratna and Verma, Kaushal},
+     TITLE = {Ergodic properties of families of {H}\'{e}non maps},
+   JOURNAL = {Ann. Polon. Math.},
+  FJOURNAL = {Annales Polonici Mathematici},
+    VOLUME = {121},
+      YEAR = {2018},
+    NUMBER = {1},
+     PAGES = {45--71},
+      ISSN = {0066-2216},
+   MRCLASS = {37F45},
+  MRNUMBER = {3816172},
+MRREVIEWER = {Feng Rong},
+       DOI = {10.4064/ap170928-2-4},
+       URL = {https://doi.org/10.4064/ap170928-2-4},
+}
+
+@article {MR3815225,
+    AUTHOR = {Banerjee, Abhishek},
+     TITLE = {Modular {H}ecke algebras over {M}\"{o}bius categories},
+   JOURNAL = {J. Geom. Phys.},
+  FJOURNAL = {Journal of Geometry and Physics},
+    VOLUME = {131},
+      YEAR = {2018},
+     PAGES = {23--40},
+      ISSN = {0393-0440},
+   MRCLASS = {16T05 (11F03)},
+  MRNUMBER = {3815225},
+MRREVIEWER = {Gabriella B\"{o}hm},
+       DOI = {10.1016/j.geomphys.2018.04.008},
+       URL = {https://doi.org/10.1016/j.geomphys.2018.04.008},
+}
+
+@article {MR3809012,
+    AUTHOR = {Chatterjee, Esha and Hassan, Sk. Sarif},
+     TITLE = {On the asymptotic character of a generalized rational
+              difference equation},
+   JOURNAL = {Discrete Contin. Dyn. Syst.},
+  FJOURNAL = {Discrete and Continuous Dynamical Systems. Series A},
+    VOLUME = {38},
+      YEAR = {2018},
+    NUMBER = {4},
+     PAGES = {1707--1718},
+      ISSN = {1078-0947},
+   MRCLASS = {39A10 (39A12)},
+  MRNUMBER = {3809012},
+       DOI = {10.3934/dcds.2018070},
+       URL = {https://doi.org/10.3934/dcds.2018070},
+}
+
+@article {MR3808055,
+    AUTHOR = {Pritham Pingali, Vamsi},
+     TITLE = {Existence of coupled {K}\"{a}hler-{E}instein metrics using the
+              continuity method},
+   JOURNAL = {Internat. J. Math.},
+  FJOURNAL = {International Journal of Mathematics},
+    VOLUME = {29},
+      YEAR = {2018},
+    NUMBER = {5},
+     PAGES = {1850041, 8},
+      ISSN = {0129-167X},
+   MRCLASS = {32Q20 (53C25)},
+  MRNUMBER = {3808055},
+MRREVIEWER = {Chi Li},
+       DOI = {10.1142/S0129167X18500416},
+       URL = {https://doi.org/10.1142/S0129167X18500416},
+}
+
+@article {MR3807052,
+    AUTHOR = {Banerjee, Abhishek},
+     TITLE = {Completions of monoid objects and descent results},
+   JOURNAL = {J. Algebra},
+  FJOURNAL = {Journal of Algebra},
+    VOLUME = {507},
+      YEAR = {2018},
+     PAGES = {362--399},
+      ISSN = {0021-8693},
+   MRCLASS = {14A20 (13J10 14A15)},
+  MRNUMBER = {3807052},
+       DOI = {10.1016/j.jalgebra.2018.04.022},
+       URL = {https://doi.org/10.1016/j.jalgebra.2018.04.022},
+}
+
+@article {MR3801104,
+    AUTHOR = {Basu, Arnab and Ghosh, Mrinal K.},
+     TITLE = {Nonzero-sum risk-sensitive stochastic games on a countable
+              state space},
+   JOURNAL = {Math. Oper. Res.},
+  FJOURNAL = {Mathematics of Operations Research},
+    VOLUME = {43},
+      YEAR = {2018},
+    NUMBER = {2},
+     PAGES = {516--532},
+      ISSN = {0364-765X},
+   MRCLASS = {91A15},
+  MRNUMBER = {3801104},
+       DOI = {10.1287/moor.2017.0870},
+       URL = {https://doi.org/10.1287/moor.2017.0870},
+}
+
+@article {MR3800492,
+    AUTHOR = {Biswas, Indranil and D'Mello, Shane and Mukherjee, Ritwik and
+              Pingali, Vamsi P.},
+     TITLE = {Rational cuspidal curves on del-{P}ezzo surfaces},
+   JOURNAL = {J. Singul.},
+  FJOURNAL = {Journal of Singularities},
+    VOLUME = {17},
+      YEAR = {2018},
+     PAGES = {91--107},
+      ISSN = {1949-2006},
+   MRCLASS = {14N35 (14H10 14J26)},
+  MRNUMBER = {3800492},
+}
+
 @article {MR3798786,
     AUTHOR = {Das, Soumya and Kohnen, Winfried},
      TITLE = {On sign changes of eigenvalues of {S}iegel cusp forms of genus
