--- a/_data/publications.bib
+++ b/_data/publications.bib
@@ -162,7 +162,7 @@
 @article {MR3836111,
     AUTHOR = {Manikandan, K. and Vishnu Priya, N. and Senthilvelan, M. and
               Sankaranarayanan, R.},
-     TITLE = {Deformation of dark solitons in a {$\Cal{PT}$}-invariant
+     TITLE = {Deformation of dark solitons in a {$\mathcal{PT}$}-invariant
               variable coefficients nonlocal nonlinear {S}chr\"{o}dinger
               equation},
    JOURNAL = {Chaos},
@@ -313,7 +313,7 @@ MRREVIEWER = {Gabriella B\"{o}hm},
 }
 
 @article {MR3808055,
-    AUTHOR = {Pritham Pingali, Vamsi},
+    AUTHOR = {Pingali, Vamsi Pritham},
      TITLE = {Existence of coupled {K}\"{a}hler-{E}instein metrics using the
               continuity method},
    JOURNAL = {Internat. J. Math.},
@@ -663,18 +663,6 @@ MRREVIEWER = {Chi Li},
        URL = {https://doi.org/10.1016/j.jalgebra.2017.10.018},
 }
 
-@book {MR3726880,
-    AUTHOR = {Gupta, S. C.},
-     TITLE = {The classical {S}tefan problem},
-      NOTE = {Basic concepts, modelling and analysis with quasi-analytical
-              solutions and methods},
- PUBLISHER = {Elsevier, Amsterdam},
-      YEAR = {2018},
-     PAGES = {xxiii+726},
-      ISBN = {978-0-444-63581-5},
-   MRCLASS = {80A22 (35C15 35R30 35R35)},
-  MRNUMBER = {3726880},
-}
 
 @article {MR3724147,
     AUTHOR = {Bhattacharyya, Tirthankar and Sau, Haripada},
