--- a/_data/publications.bib
+++ b/_data/publications.bib
@@ -1,3 +1,54 @@
+@article {MR3892339,
+    AUTHOR = {Mal, Arpita and Sain, Debmalya and Paul, Kallol},
+     TITLE = {On some geometric properties of operator spaces},
+   JOURNAL = {Banach J. Math. Anal.},
+  FJOURNAL = {Banach Journal of Mathematical Analysis},
+    VOLUME = {13},
+      YEAR = {2019},
+    NUMBER = {1},
+     PAGES = {174--191},
+      ISSN = {1735-8787},
+   MRCLASS = {46B20 (47L05)},
+  MRNUMBER = {3892339},
+       DOI = {10.1215/17358787-2018-0021},
+       URL = {https://doi.org/10.1215/17358787-2018-0021},
+}
+
+@article {MR3876750,
+    AUTHOR = {Gaussier, Herv\'{e} and Seshadri, Harish},
+     TITLE = {Holomorphic motions and complex geometry},
+   JOURNAL = {Proc. Amer. Math. Soc.},
+  FJOURNAL = {Proceedings of the American Mathematical Society},
+    VOLUME = {147},
+      YEAR = {2019},
+    NUMBER = {1},
+     PAGES = {301--313},
+      ISSN = {0002-9939},
+   MRCLASS = {32F45 (32Q45 53C23)},
+  MRNUMBER = {3876750},
+       DOI = {10.1090/proc/14217},
+       URL = {https://doi.org/10.1090/proc/14217},
+}
+
+@article {MR3869743,
+    AUTHOR = {Vishnu Priya, N. and Senthilvelan, M. and Rangarajan, Govindan
+              and Lakshmanan, M.},
+     TITLE = {On symmetry preserving and symmetry broken bright, dark and
+              antidark soliton solutions of nonlocal nonlinear {S}chr\"{o}dinger
+              equation},
+   JOURNAL = {Phys. Lett. A},
+  FJOURNAL = {Physics Letters. A},
+    VOLUME = {383},
+      YEAR = {2019},
+    NUMBER = {1},
+     PAGES = {15--26},
+      ISSN = {0375-9601},
+   MRCLASS = {35Q55 (35A30 35C08)},
+  MRNUMBER = {3869743},
+       DOI = {10.1016/j.physleta.2018.10.011},
+       URL = {https://doi.org/10.1016/j.physleta.2018.10.011},
+}
+
 
 @article {MR3860458,
     AUTHOR = {Ghara, Soumitra and Kumar, Surjit},
