--- a/_all-courses/ma334.md
+++ b/_all-courses/ma334.md
@@ -11,9 +11,8 @@ books:
     publ: Cambridge University Press, Cambridge, 2002
   - title: Tutorial for the Lean Theorem Prover
 prereqs:
-  - Basic topology and mathematical maturity will be assumed.
-  - Some familiarity with algebraic topology will be helpful, as will some familiarity with programming in a functional language.
-prereq-courses: MA 232
+  - Algebraic Topology, Dependent Type Theory
+prereq-courses: MA 210, MA 232, MA 332
 ug-prereq-courses: 
 ---
 
@@ -21,4 +20,6 @@ ug-prereq-courses:
 
 This course introduces homotopy type theory, which provides alternative foundations for mathematics based on deep connections between type theory, from logic and computer science, and homotopy theory, from topology. This connection is based on interpreting types as spaces, terms as points and equalities as paths. Many homotopical notions have type-theoretic counterparts which are very useful for foundations.
 
-Such foundations are far closer to actual mathematics than the traditional ones based on set theory and logic, and are very well suited for use in computer-based proof systems, especially formal verification systems. We will use the Lean Theorem Prover in this course. Note that the latest version (Lean 3) doen not support Homotopy Type Theory (yet), so you must use Lean 2.
+Such foundations are far closer to actual mathematics than the traditional ones based on set theory and logic, and are very well suited for use in computer-based proof systems, especially formal verification systems. 
+
+The course will also include background material in Algebraic Topology (beyond a second course in Algebraic Topology).
