--- a/_all-courses/ma337.md
+++ b/_all-courses/ma337.md
@@ -8,7 +8,7 @@ books:
 
 prereqs:
   - "familiarity with constructing proofs (e.g., having taken an Algebra/Linear Algebra/Analysis course in the mathematics department)"
-  - a basic familiarity with programming.
+  - familiarity with programming, ideally in a functional language (such as Scala, Haskell, OCaml or Idris).
 prereq-courses: MA 232
 ug-prereq-courses: 
 ---
@@ -17,7 +17,5 @@ ug-prereq-courses:
 
 The goal of this course is to use computers to address various
 questions in Topology and Geometry, with an emphasis on arriving at
-rigourous proofs. The course will consist primarily of assignments
-and projects. The computing tools used will include wrting own programs,
-existing Automated Theorem Proving Programs and packages like Maple,
-Mathematica and Matlab.
+rigorous proofs. The course will consist primarily of projects which will be 
+contributions to open source software written in the [scala](https://www.scala-lang.org/) programming language. 
