--- a/_all-courses/ma368.md
+++ b/_all-courses/ma368.md
@@ -4,31 +4,27 @@
 code: MA 368
 title: Topics in Probability and Stochastic Processes
 books:
-  - author: Chung, K. L.
-    title: A course in Probability Theory, 3rdedition
-    publ: Academic Press, San Diego, USA. 2001
-  - author: Feller, W.
-    title: Introduction to Probability Theory and Applications, Vol. I & II, 22ndedition
-    publ: John Wiley and Sons, 1971
-  - author: Shiryaev, A. N.
-    title: Probability
-    publ: Springer, New York, 1966
-  - author: Spitzer, F.
-    title: Principles of Random Walk, 2ndedition
-    publ: Springer, New York, 1976
-  - author: Athreya, K. B., and Ney, P. E.
-    title: Branching Processes
-    publ: Springer, New York, 1972
-  - author: Williams, D.
+  - author: Rick Durrett
+    title: "Probability: theory and examples."
+    publ: Cambridge University Press, 2010.
+  - author: David Williams
     title: Probability with Martingales
     publ: Cambridge Univ., Press, 1991
+  - author: Peter Mörters and Yuval Peres
+    title: Brownian motion
+    publ: Cambridge University Press, 2010.
+  - author: Olav Kallenberg
+    title: Foundations of modern Probability. Second Edition
+    publ: Springer-Verlag, 2002.
+  - author: John Walsh
+    title: "Knowing the Odds: An Introduction to Probability"
+    publ: AMS, 2012.
 
 prereq-courses: MA361
-ug-prereq-courses: 
+ug-prereq-courses:
 ---
 
+Discrete parameter martingales: Conditional expectation. Optional sampling theorems. Doob's inequalities. Martingale convergence theorems. Applications.
 
-
-Discrete Parameter Martingales and Applications, Ergodic Theory, Random Walks,
-Branching Processes.
+Brownian motion. Construction. Continuity properties. Markov and strong Markov property and applications. Donsker's invariance principle. Further sample path properties.
  
