Ved course changes

--- a/_all-courses/ma333.md
+++ b/_all-courses/ma333.md
@@ -8,10 +8,13 @@ books:
   - author: Peter Petersen
     title: Riemannian geometry
     publ: Graduate Texts in Mathematics, 171. Springer-Verlag, New York, 1998
+  - author: John Lee
+    title: Riemannian Geometry - An introduction to curvature
+    publ: Graduate Texts in Mathematics, 176. Springer-Verlag, New York, 1997
 prereq-courses:
 ug-prereq-courses:
 ---
 
 
 
-Riemannian metric, Levi-Civita connection, geodesics, exponential map, Hopf-Rinow theorem, curvature tensior, first and second variational formula, jacobi fields, Myers Bonnet theorem, Bishop-Gromov volume comparison theorem, Cartan-Hadamard theorem, Synge’s theorem, de Rham cohomology and the Bochner techniques.  Topological implications of positive or negative curvature.
+Review of differentiable manifolds and tensors, Riemannian metrics, Levi-Civita connection, geodesics, exponential map, curvature tensor, first and second variation formulas, Jacobi fields, conjugate points and cut locus, Cartan-Hadamard and Bonnet Myers theorems. Special topics - Comparison geometry (theorems of Rauch, Toponogov, Bishop-Gromov), and Bochner techniques.
