publications with article, review

--- a/_data/publications.bib
+++ b/_data/publications.bib
@@ -997,6 +997,22 @@ MRREVIEWER = {Fabio Vlacci},
        URL = {https://doi.org/10.1007/s12044-018-0388-1},
 }
 
+@article {MR3778230,
+    AUTHOR = {Baklouti, Ali and Thangavelu, Sundaram},
+     TITLE = {Hardy and {M}iyachi theorems for {H}eisenberg motion groups},
+   JOURNAL = {Nagoya Math. J.},
+  FJOURNAL = {Nagoya Mathematical Journal},
+    VOLUME = {229},
+      YEAR = {2018},
+     PAGES = {1--20},
+      ISSN = {0027-7630},
+   MRCLASS = {22E25},
+  MRNUMBER = {3778230},
+MRREVIEWER = {Chal Benson},
+       DOI = {10.1017/nmj.2016.58},
+       URL = {https://doi.org/10.1017/nmj.2016.58},
+}
+
 @article {MR3777102,
     AUTHOR = {Gaddam, Sharat and Gudi, Thirupathi},
      TITLE = {Inhomogeneous {D}irichlet boundary condition in the {\it a
