--- a/_data/publications.bib
+++ b/_data/publications.bib
@@ -5970,6 +5970,23 @@ MRREVIEWER = {H. P. Dikshit},
        URL = {http://dx.doi.org/10.1137/110847469},
 }
 
+@article {MR3010810,
+    AUTHOR = {Krishnapur, Manjunath and Kurlberg, P\"{a}r and Wigman, Igor},
+     TITLE = {Nodal length fluctuations for arithmetic random waves},
+   JOURNAL = {Ann. of Math. (2)},
+  FJOURNAL = {Annals of Mathematics. Second Series},
+    VOLUME = {177},
+      YEAR = {2013},
+    NUMBER = {2},
+     PAGES = {699--737},
+      ISSN = {0003-486X},
+   MRCLASS = {58C40 (60G60)},
+  MRNUMBER = {3010810},
+MRREVIEWER = {Nelia Charalambous},
+       DOI = {10.4007/annals.2013.177.2.8},
+       URL = {https://doi.org/10.4007/annals.2013.177.2.8},
+}
+
 @article {MR3016482,
     AUTHOR = {Pusti, Sanjoy and Sarkar, Rudra P.},
      TITLE = {Spectral analysis on {${\rm SL}(2, \Bbb{R})$}},
@@ -6868,6 +6885,24 @@ MRREVIEWER = {Oscar F. Bandtlow},
        DOI = {10.1515/APAM.2010.042},
        URL = {http://dx.doi.org/10.1515/APAM.2010.042},
 }
+
+@article {MR2831116,
+    AUTHOR = {Guionnet, Alice and Krishnapur, Manjunath and Zeitouni, Ofer},
+     TITLE = {The single ring theorem},
+   JOURNAL = {Ann. of Math. (2)},
+  FJOURNAL = {Annals of Mathematics. Second Series},
+    VOLUME = {174},
+      YEAR = {2011},
+    NUMBER = {2},
+     PAGES = {1189--1217},
+      ISSN = {0003-486X},
+   MRCLASS = {60B20 (15B52)},
+  MRNUMBER = {2831116},
+MRREVIEWER = {Walid Hachem},
+       DOI = {10.4007/annals.2011.174.2.10},
+       URL = {https://doi.org/10.4007/annals.2011.174.2.10},
+}
+
 
 @article {MR2830689,
     AUTHOR = {Patil, Dilip P. and Tandon, Anshoo},
