lastname, firstname for PolyMath

--- a/_data/publications.bib
+++ b/_data/publications.bib
@@ -646,7 +646,7 @@ MRREVIEWER = {T. S. S. R. K. Rao},
 }
 
 @article {MR3871510,
-    AUTHOR = {Tobias Fritz, Siddhartha Gadgil, Apoorva Khare, Pace P. Nielsen, Lior Silberman and Terence Tao},
+    AUTHOR = {Fritz, Tobias and Gadgil, Siddhartha and Khare, Apoorva and Nielsen, Pace P. and Silberman, Lior and Tao, Terence},
      TITLE = {Homogeneous length functions on groups},
    JOURNAL = {Algebra Number Theory},
   FJOURNAL = {Algebra \& Number Theory},
