--- a/_data/publications.bib
+++ b/_data/publications.bib
@@ -1295,6 +1295,24 @@ MRREVIEWER = {Swaminathan Subramanian},
        URL = {https://doi.org/10.1142/S0129167X18500155},
 }
 
+
+@article {MR3758516,
+    AUTHOR = {Arunkumar, G. and Kus, Deniz and Venkatesh, R.},
+     TITLE = {Root multiplicities for {B}orcherds algebras and graph
+              coloring},
+   JOURNAL = {J. Algebra},
+  FJOURNAL = {Journal of Algebra},
+    VOLUME = {499},
+      YEAR = {2018},
+     PAGES = {538--569},
+      ISSN = {0021-8693},
+   MRCLASS = {05E18 (05C15 05C31 20C08)},
+  MRNUMBER = {3758516},
+MRREVIEWER = {Anthony Henderson},
+       DOI = {10.1016/j.jalgebra.2017.11.050},
+       URL = {https://doi.org/10.1016/j.jalgebra.2017.11.050},
+}
+
 @article {MR3781317,
     AUTHOR = {Thangavelu, Sundaram and Naidu Dogga, Venku},
      TITLE = {{$L^p$}-{$L^2$} estimates for solutions of the wave equation
