--- a/_data/publications.bib
+++ b/_data/publications.bib
@@ -1,3 +1,34 @@
+@article {MR3958142,
+    AUTHOR = {Belton, Alexander and Guillot, Dominique and Khare, Apoorva
+              and Putinar, Mihai},
+     TITLE = {Simultaneous kernels of matrix {H}adamard powers},
+   JOURNAL = {Linear Algebra Appl.},
+  FJOURNAL = {Linear Algebra and its Applications},
+    VOLUME = {576},
+      YEAR = {2019},
+     PAGES = {142--157},
+      ISSN = {0024-3795},
+   MRCLASS = {15B48 (15A21)},
+  MRNUMBER = {3958142},
+       DOI = {10.1016/j.laa.2018.03.035},
+       URL = {https://doi.org/10.1016/j.laa.2018.03.035},
+}
+
+@article {MR3958126,
+    AUTHOR = {Khare, Apoorva and Tikaradze, Akaki},
+     TITLE = {A {C}arlitz--von {S}taudt type theorem for finite rings},
+   JOURNAL = {Linear Algebra Appl.},
+  FJOURNAL = {Linear Algebra and its Applications},
+    VOLUME = {568},
+      YEAR = {2019},
+     PAGES = {106--126},
+      ISSN = {0024-3795},
+   MRCLASS = {16P10 (16K20)},
+  MRNUMBER = {3958126},
+       DOI = {10.1016/j.laa.2018.05.035},
+       URL = {https://doi.org/10.1016/j.laa.2018.05.035},
+}
+
 @article {MR3941479,
     AUTHOR = {Quddus, Safdar},
      TITLE = {Invariants of the {$\Bbb Z_2$} orbifolds of the {P}odle\'{s} two
