missing Arvind publication

--- a/_data/publications.bib
+++ b/_data/publications.bib
@@ -4312,6 +4312,23 @@ MRREVIEWER = {Elvira Di Nardo},
        URL = {https://doi.org/10.1214/EJP.v20-3495},
 }
 
+@incollection {MR3308326,
+    AUTHOR = {Ayyer, Arvind and Klee, Steven and Schilling, Anne},
+     TITLE = {Markov chains for promotion operators},
+ BOOKTITLE = {Algebraic monoids, group embeddings, and algebraic
+              combinatorics},
+    SERIES = {Fields Inst. Commun.},
+    VOLUME = {71},
+     PAGES = {285--304},
+ PUBLISHER = {Springer, New York},
+      YEAR = {2014},
+   MRCLASS = {06A07 (47D03 60J05)},
+  MRNUMBER = {3308326},
+MRREVIEWER = {Hiro-Fumi Yamada},
+       DOI = {10.1007/978-1-4939-0938-4_13},
+       URL = {https://doi.org/10.1007/978-1-4939-0938-4_13},
+}
+
 @article {MR3305169,
     AUTHOR = {Krishnamoorthy, A. and Manikandan, R. and Shajin, Dhanya},
      TITLE = {Analysis of a multiserver queueing-inventory system},
