tirtha missing papers

--- a/_data/publications.bib
+++ b/_data/publications.bib
@@ -12992,6 +12992,24 @@ MRREVIEWER = {Roberto Natalini},
        URL = {http://dx.doi.org/10.1017/S0022112001003731},
 }
 
+@article {MR1829275,
+    AUTHOR = {Bhattacharyya, Tirthankar and Ko\v{s}ir, Toma\v{z}},
+     TITLE = {On commuting compact self-adjoint operators on a {P}ontryagin
+              space},
+   JOURNAL = {Integral Equations Operator Theory},
+  FJOURNAL = {Integral Equations and Operator Theory},
+    VOLUME = {39},
+      YEAR = {2001},
+    NUMBER = {4},
+     PAGES = {377--386},
+      ISSN = {0378-620X},
+   MRCLASS = {47B50},
+  MRNUMBER = {1829275},
+MRREVIEWER = {Volodymyr Derkach},
+       DOI = {10.1007/BF01203319},
+       URL = {https://doi.org/10.1007/BF01203319},
+}
+
 @article {MR1825846,
     AUTHOR = {Joseph, K. T. and Sachdev, P. L.},
      TITLE = {Initial boundary value problems for scalar and vector
@@ -13022,6 +13040,25 @@ MRREVIEWER = {Grzegorz Karch},
    MRCLASS = {35B27 (35K55 35K65 49J45)},
   MRNUMBER = {1824787},
 MRREVIEWER = {Alain Brillard},
+}
+
+@article {MR1820294,
+    AUTHOR = {Bhattacharya, T. and Binding, P. A. and Seddighi, K.},
+     TITLE = {Two-parameter right definite {S}turm-{L}iouville problems with
+              eigenparameter-dependent boundary conditions},
+   JOURNAL = {Proc. Roy. Soc. Edinburgh Sect. A},
+  FJOURNAL = {Proceedings of the Royal Society of Edinburgh. Section A.
+              Mathematics},
+    VOLUME = {131},
+      YEAR = {2001},
+    NUMBER = {1},
+     PAGES = {45--58},
+      ISSN = {0308-2105},
+   MRCLASS = {34B24},
+  MRNUMBER = {1820294},
+MRREVIEWER = {Jan Bochenek},
+       DOI = {10.1017/S0308210500000780},
+       URL = {https://doi.org/10.1017/S0308210500000780},
 }
 
 @article {MR1816457,
