more thesis data

--- a/_seminars/2017/2017-06-15-Aiyappan.md
+++ b/_seminars/2017/2017-06-15-Aiyappan.md
@@ -1,12 +1,12 @@
 ---
 speaker: Aiyappan S (IISc Mathematics)
 title: "Unfolding Operators in Various Oscillatory Domains: Homogenization of Optimal Control Problems"
-date: 18 December, 2017
+date: 2017-06-15
 time: 10:30 am
 venue: LH-3, Mathematics Department
 series: Thesis
 series-prefix: PhD
-series-suffix: defence
+series-suffix: colloquium
 ---
 
 Homogenization of boundary value problems posed on rough domains has paramount importance in real life problems. Materials with oscillating (rough) boundary are used in many industrial applications like micro strip radiator
