--- a/_all-courses/ma395.md
+++ b/_all-courses/ma395.md
@@ -1,4 +1,30 @@
 ---
 title: Topics in Stochastic Finance
 code: MA 395
+books:
+  - author: Luenberger, D. V.
+    ttle: Investment Science
+    publ: Oxford University Press, 1998
+  - author: Roman, S.
+    title: Introduction to the Mathematics of Finance
+    publ: Springer, 2004
+  - author: Shiryaev, A. N.
+    title: Essentials of Stochastic Finance
+    publ: World Scientific, 1999
+  - author: Shreve, S. E.
+    title: "Stochastic Calculus for Finance I: The Binomial Asset Pricing Model"
+    publ: Springer, 2004
+  - author: Shreve, S. E.
+    title: "Stochastic Calculus for Finance II: The Continuous Time Models"
+    publ: Springer, 2004
 ---
+
+Financial market. Financial instruments: bonds, stocks, derivatives. Binomial no-
+arbitrage pricing model: single period and multi-period models. Martingale methods
+for pricing. American options: the Snell envelope. Investment portfolio: Markovitz’s
+diversification. Capital asset pricing model(CAPM). Utility theory.
+
+Trading in continuous time: geometric Brownian motion model. Option pricing:
+Black-Scholes-Merton theory. Hedging in continuous time: the Greeks. American
+options. Exotic options. Market imperfections. Term-Structure models: Vasicek,
+Hull-White and CIR models. HJM model. Forward LIBOR model.
